--- a/index.html
+++ b/index.html
@@ -222,7 +222,58 @@
         </tr>
     </table>
 
-    <h2>Être & Avoir (Completely Irregular)</h2>
+    <h2>Irregular -RE and -IR</h2>
+    <p><strong>Verbs that do not follow the standard -RE or -IR patterns.</strong></p>
+
+    <table>
+        <tr>
+            <td>Lire</td>
+            <td><button onclick="speak(`Je lis`)">Je lis 🔊</button></td>
+            <td><button onclick="speak('Tu lis')">Tu lis 🔊</button></td>
+            <td><button onclick="speak('Il lit')">Il lit 🔊</button></td>
+            <td><button onclick="speak('Elle lit')">Elle lit 🔊</button></td>
+            <td><button onclick="speak('Nous lisons')">Nous lisons 🔊</button></td>
+            <td><button onclick="speak('Vous lisez')">Vous lisez 🔊</button></td>
+            <td><button onclick="speak('Ils lisent')">Ils lisent 🔊</button></td>
+            <td><button onclick="speak('Elles lisent')">Elles lisent 🔊</button></td>
+        </tr>
+        <tr>
+            <td>Dormir</td>
+            <td><button onclick="speak(`Je dors`)">Je dors 🔊</button></td>
+            <td><button onclick="speak('Tu dors')">Tu dors 🔊</button></td>
+            <td><button onclick="speak('Il dort')">Il dort 🔊</button></td>
+            <td><button onclick="speak('Elle dort')">Elle dort 🔊</button></td>
+            <td><button onclick="speak('Nous dormons')">Nous dormons 🔊</button></td>
+            <td><button onclick="speak('Vous dormez')">Vous dormez 🔊</button></td>
+            <td><button onclick="speak('Ils dorment')">Ils dorment 🔊</button></td>
+            <td><button onclick="speak('Elles dorment')">Elles dorment 🔊</button></td>
+        </tr>
+        <tr>
+            <td>Venir</td>
+            <td><button onclick="speak(`Je viens`)">Je viens 🔊</button></td>
+            <td><button onclick="speak('Tu viens')">Tu viens 🔊</button></td>
+            <td><button onclick="speak('Il vient')">Il vient 🔊</button></td>
+            <td><button onclick="speak('Elle vient')">Elle vient 🔊</button></td>
+            <td><button onclick="speak('Nous venons')">Nous venons 🔊</button></td>
+            <td><button onclick="speak('Vous venez')">Vous venez 🔊</button></td>
+            <td><button onclick="speak('Ils viennent')">Ils viennent 🔊</button></td>
+            <td><button onclick="speak('Elles viennent')">Elles viennent 🔊</button></td>
+        </tr>
+        <tr>
+            <td>Vouloir</td>
+            <td><button onclick="speak(`Je veux`)">Je veux 🔊</button></td>
+            <td><button onclick="speak('Tu veux')">Tu veux 🔊</button></td>
+            <td><button onclick="speak('Il veut')">Il veut 🔊</button></td>
+            <td><button onclick="speak('Elle veut')">Elle veut 🔊</button></td>
+            <td><button onclick="speak('Nous voulons')">Nous voulons 🔊</button></td>
+            <td><button onclick="speak('Vous voulez')">Vous voulez 🔊</button></td>
+            <td><button onclick="speak('Ils veulent')">Ils veulent 🔊</button></td>
+            <td><button onclick="speak('Elles veulent')">Elles veulent 🔊</button></td>
+        </tr>
+    </table>
+
+
+    <h2>Être, Avoir & Aller (Completely Irregular)</h2>
     <p><strong>Essential verbs, used in almost every sentence.</strong></p>
 
     <table>
@@ -248,12 +299,6 @@
             <td><button onclick="speak('Ils ont')">Ils ont 🔊</button></td>
             <td><button onclick="speak('Elles ont')">Elles ont 🔊</button></td>
         </tr>
-    </table>
-
-    <h2>Aller (Completely Irregular)</h2>
-    <p><strong>Very irregular, no clear pattern.</strong></p>
-
-    <table>
         <tr>
             <td>Aller</td>
             <td><button onclick="speak(`Je vais`)">Je vais 🔊</button></td>
